Api NPS homolog endpoint
